--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DatenLord</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
     <link type="text/css" rel="styleSheet"  href="./css/index.css" />
     <link type="text/css" rel="styleSheet"  href="./css/reset.css" />
     <link type="text/css" rel="styleSheet"  href="./css/main.css" />
@@ -22,7 +23,7 @@
             border-radius: 8px;
         }
 
-        .content_body:last-child {
+        .content_box:last-child {
             margin-right: 0 !important;
         }
 
@@ -64,6 +65,10 @@
             background: url(./images/banner.png) 100% no-repeat;
             height: 400px;
             background-size: 100% 100%;
+        }
+
+        .content_box:hover {
+            box-shadow: 0px 8px 20px 10px rgba(41, 93, 210, 0.6);
         }
     </style>
 </head>
@@ -141,7 +146,7 @@
 <div class="model_back" id="tipModel">
     <div class="model">
         <div style="width: auto; text-align: center;">
-            <img src="images/datenLord_logo.png" style="margin-top: 30px;width: 100px;height: 100px">
+            <img src="images/DatenLord_logo_2x.png" style="margin-top: 30px;width: 100px;height: 100px">
             <h3 style="color: #000000;margin-bottom: 20px;;font-size: 24px;font-weight: bold">请升级浏览器版本</h3>
             <p>您正在使用旧版本浏览器。请升级浏览器以获得更好的体验。</p>
             <div style="display: inline-block; text-align: center;">
