--- a/join.html
+++ b/join.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Us</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
     <link type="text/css" rel="styleSheet"  href="./css/index.css" />
     <link type="text/css" rel="styleSheet"  href="./css/reset.css" />
     <link type="text/css" rel="styleSheet"  href="./css/main.css" />
