--- a/home.html
+++ b/home.html
@@ -97,34 +97,36 @@
     <div class="content">
         <div class="home_banner">
         </div>
-        <div class="content_body">
-            <div class="content_box">
-                <div class="content_img">
-                    <img src="images/cloud.png" class="home_img"/>
+        <div style="display: flex;justify-content: center;width: 100%">
+            <div class="content_body">
+                <div class="content_box">
+                    <div class="content_img">
+                        <img src="images/cloud.png" class="home_img"/>
+                    </div>
+                    <p class="content_box_title">跨云服务</p>
+                    <p class="content_box_con">使用S3存储协议实现跨云存储</p>
                 </div>
-                <p class="content_box_title">跨云服务</p>
-                <p class="content_box_con">使用S3存储协议实现跨云存储</p>
-            </div>
-            <div class="content_box">
-                <div class="content_img">
-                    <img src="images/cache.png" class="home_img"/>
+                <div class="content_box">
+                    <div class="content_img">
+                        <img src="images/cache.png" class="home_img"/>
+                    </div>
+                    <p class="content_box_title">高性能缓存</p>
+                    <p class="content_box_con">使用内存对热点数据高速缓存</p>
                 </div>
-                <p class="content_box_title">高性能缓存</p>
-                <p class="content_box_con">使用内存对热点数据高速缓存</p>
-            </div>
-            <div class="content_box">
-                <div class="content_img">
-                    <img src="images/network.png" class="home_img"/>
+                <div class="content_box">
+                    <div class="content_img">
+                        <img src="images/network.png" class="home_img"/>
+                    </div>
+                    <p class="content_box_title">高速网络</p>
+                    <p class="content_box_con">使用RMDA增加网络吞吐降低网络延迟</p>
                 </div>
-                <p class="content_box_title">高速网络</p>
-                <p class="content_box_con">使用RMDA增加网络吞吐降低网络延迟</p>
-            </div>
-            <div class="content_box">
-                <div class="content_img">
-                    <img src="images/store.png" class="home_img"/>
+                <div class="content_box">
+                    <div class="content_img">
+                        <img src="images/store.png" class="home_img"/>
+                    </div>
+                    <p class="content_box_title">分布式存储</p>
+                    <p class="content_box_con">使用EPaxos协议保证跨节点数据一致性</p>
                 </div>
-                <p class="content_box_title">分布式存储</p>
-                <p class="content_box_con">使用EPaxos协议保证跨节点数据一致性</p>
             </div>
         </div>
     </div>
