--- a/join.html
+++ b/join.html
@@ -213,7 +213,7 @@
 <div class="model_back" id="tipModel">
     <div class="model">
         <div style="width: auto; text-align: center;">
-            <img src="images/datenLord_logo.png" style="margin-top: 30px;width: 100px;height: 100px">
+            <img src="images/DatenLord_logo_2x.png" style="margin-top: 30px;width: 100px;height: 100px">
             <h3 style="color: #000000;margin-bottom: 20px;;font-size: 24px;font-weight: bold">请升级浏览器版本</h3>
             <p>您正在使用旧版本浏览器。请升级浏览器以获得更好的体验。</p>
             <div style="display: inline-block; text-align: center;">
