修复<<EOF不显示

--- a/docs.html
+++ b/docs.html
@@ -165,7 +165,7 @@
     }
 
     .hljs {
-      background: black;
+      background: #0C162D;
     }
 
     pre code.hljs {
@@ -194,7 +194,7 @@
     }
 
     .code_box {
-      background-color: #000000;
+      background-color: #0C162D;
       padding: 32px;
       color: #34CE58;
       font-size: 18px;
@@ -455,7 +455,7 @@
               <div style="display: flex;justify-content: space-between">
                 <div style="width: 680px; margin-top: -80px;height: auto;background-color: #000000;border-radius: 8px;">
                   <pre><code>
-cat <<EOF >datenlord-demo.yaml
+cat &lt;&lt;EOF >datenlord-demo.yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -711,7 +711,7 @@ kubectl apply -f datenlord-demo.yaml
           </p>
           <div style="width: 100%;height: auto;background-color: #0C162D;border-radius: 8px;">
             <pre><code>
-cat <<EOF >datenlord-demo.yaml
+cat &lt;&lt;EOF >datenlord-demo.yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
