增加英文界面

--- a/en/home.html
+++ b/en/home.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DatenLord</title>
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
-    <link type="text/css" rel="styleSheet"  href="./css/index.css" />
-    <link type="text/css" rel="styleSheet"  href="./css/reset.css" />
-    <link type="text/css" rel="styleSheet"  href="./css/main.css" />
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon"/>
+    <link type="text/css" rel="styleSheet"  href="../css/index.css" />
+    <link type="text/css" rel="styleSheet"  href="../css/reset.css" />
+    <link type="text/css" rel="styleSheet"  href="../css/main.css" />
+    <link type="text/css" rel="styleSheet"  href="./mo_css/home.css" />
     <style>
         .content_box {
             width: 270px;
@@ -34,21 +35,23 @@
         }
 
         .content_box_title {
-            margin-top: 65px;
-            margin-bottom: 30px;
+            text-align: center;
+            padding: 20px;
             display: flex;
             justify-content: center;
-            font-size: 28px;
+            font-size: 24px;
+            color: #000000;
+            line-height: 32px;
         }
 
         .content_box_con {
             margin-bottom: 88px;
             padding: 0 20px;
-            font-size: 16px;
+            font-size: 18px;
             font-family: PingFangSC-Regular, PingFang SC;
             font-weight: 400;
             color: #000000;
-            line-height: 32px;
+            line-height: 26px;
         }
 
         .content_body {
@@ -62,7 +65,7 @@
         }
 
         .home_banner {
-            background: url(./images/banner.png) 100% no-repeat;
+            background: url(../images/banner.png) 100% no-repeat;
             height: 400px;
             background-size: 100% 100%;
         }
@@ -77,23 +80,23 @@
     <div class="header_box">
         <div class="header">
             <div class="header_left">
-                <img src="images/daztenLord.png"  onclick="window.location.href='home.html'" class="datenLord">
-                <img src="images/datenLord_logo.png"  onclick="window.location.href='home.html'" class="datenLord_logo">
+                <img src="../images/daztenLord.png"  onclick="window.location.href='home.html'" class="datenLord">
+                <img src="../images/datenLord_logo.png"  onclick="window.location.href='home.html'" class="datenLord_logo">
             </div>
             <div class="header_right">
                 <div class="div_hover">
-                    <p onclick="window.location.href='docs.html'">DOCS</p>
+                    <p onclick="window.location.href='../docs.html'">DOCS</p>
                 </div>
                 <div class="div_hover">
-                    <p onclick="window.location.href='join.html'">JOIN US</p>
+                    <p onclick="window.location.href='../join.html'">JOIN US</p>
                 </div>
                 <div class="lang_select">
-                    <p>EN</p>
-                    <img src="./images/drop-down.png" class="header_arrow drop_down">
+                    <p>ZH</p>
+                    <img src="../images/drop-down.png" class="header_arrow drop_down">
                     <div id="lang" class="lang_box">
                         <ul class="lang">
-                            <li>ZH</li>
-                            <li onclick="window.location.href='./en/home.html'">EN</li>
+                            <li onclick="window.location.href='../home.html'">ZH</li>
+                            <li>EN</li>
                         </ul>
                     </div>
                 </div>
@@ -107,31 +110,31 @@
             <div class="content_body">
                 <div class="content_box">
                     <div class="content_img">
-                        <img src="images/cloud.png" class="home_img"/>
+                        <img src="../images/cloud.png" class="home_img"/>
                     </div>
-                    <p class="content_box_title">跨云服务</p>
-                    <p class="content_box_con">使用S3存储协议实现跨云存储</p>
+                    <p class="content_box_title">Across Multiple Could Providers</p>
+                    <p class="content_box_con">Use S3 protocol to access S3 compatible storage providers</p>
                 </div>
                 <div class="content_box">
                     <div class="content_img">
-                        <img src="images/cache.png" class="home_img"/>
+                        <img src="../images/cache.png" class="home_img"/>
                     </div>
-                    <p class="content_box_title">高性能缓存</p>
-                    <p class="content_box_con">使用内存对热点数据高速缓存</p>
+                    <p class="content_box_title">High<br> Performance Cache</p>
+                    <p class="content_box_con">Use memory to cache hot data to accelerate access speed</p>
                 </div>
                 <div class="content_box">
                     <div class="content_img">
-                        <img src="images/network.png" class="home_img"/>
+                        <img src="../images/network.png" class="home_img"/>
                     </div>
-                    <p class="content_box_title">高速网络</p>
-                    <p class="content_box_con">使用RMDA增加网络吞吐降低网络延迟</p>
+                    <p class="content_box_title">High<br> Speed Network</p>
+                    <p class="content_box_con">Use RMDA to increase network throughput and reduce network latency</p>
                 </div>
                 <div class="content_box">
                     <div class="content_img">
-                        <img src="images/store.png" class="home_img"/>
+                        <img src="../images/store.png" class="home_img"/>
                     </div>
-                    <p class="content_box_title">分布式存储</p>
-                    <p class="content_box_con">使用EPaxos协议保证跨节点数据一致性</p>
+                    <p class="content_box_title">Distributed<br> Storage</p>
+                    <p class="content_box_con">Use EPaxos consensus algorithm to ensure data consistency across data nodes</p>
                 </div>
             </div>
         </div>
@@ -139,14 +142,14 @@
     <div class="footer_box">
         <div class="footer">
             <div class="footer_img">
-                <img src="images/logo_Dark.png">
+                <img src="../images/logo_Dark.png">
             </div>
             <div class="footer_icon">
-                <img src="images/icon1.png">
-                <img src="images/icon2.png">
-                <img src="images/icon3.png">
-                <img src="images/icon4.png">
-                <img src="images/icon5.png">
+                <img src="../images/icon1.png">
+                <img src="../images/icon2.png">
+                <img src="../images/icon3.png">
+                <img src="../images/icon4.png">
+                <img src="../images/icon5.png">
             </div>
         </div>
     </div>
@@ -154,24 +157,24 @@
 <div class="model_back" id="tipModel">
     <div class="model">
         <div style="width: auto; text-align: center;">
-            <img src="images/DatenLord_logo_2x.png" style="margin-top: 30px;width: 100px;height: 100px">
+            <img src="../images/DatenLord_logo_2x.png" style="margin-top: 30px;width: 100px;height: 100px">
             <h3 style="color: #000000;margin-bottom: 20px;;font-size: 24px;font-weight: bold">请升级浏览器版本</h3>
             <p>您正在使用旧版本浏览器。请升级浏览器以获得更好的体验。</p>
             <div style="display: inline-block; text-align: center;">
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/chrome.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/chrome.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Chrome</p>
                 </div>
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/firefox.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/firefox.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Firefox</p>
                 </div>
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/safari.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/safari.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Safari</p>
                 </div>
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/edge.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/edge.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Edge</p>
                 </div>
             </div>
@@ -179,7 +182,7 @@
 
     </div>
 </div>
-<script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 <script>isIE();</script>
 </body>
 </html>
