--- a/docs.html
+++ b/docs.html
@@ -260,9 +260,15 @@
           <div class="div_hover">
             <p onclick="window.location.href='join.html'">JOIN US</p>
           </div>
-          <div>
+          <div class="lang_select">
             <p>EN</p>
-            <img src="images/drop-down.png" class="header_arrow">
+            <img src="./images/drop-down.png" class="header_arrow drop_down">
+            <div id="lang" class="lang_box">
+              <ul class="lang">
+                <li onclick="window.location.href='./docs.html'">ZH</li>
+                <li onclick="window.location.href='./docs.html'">EN</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
