中英文切换下拉框调整

--- a/docs.html
+++ b/docs.html
@@ -265,10 +265,13 @@
             <img src="./images/drop-down.png" class="header_arrow drop_down">
             <div id="lang" class="lang_box">
               <ul class="lang">
-                <li onclick="window.location.href='./docs.html'">ZH</li>
+                <li onclick="window.location.href='./docs.html'">中</li>
                 <li onclick="window.location.href='./docs.html'">EN</li>
               </ul>
             </div>
+          </div>
+          <div class="github_icon">
+            <img src="images/github_icon.png" onclick="window.location.href='https://github.com/'">
           </div>
         </div>
       </div>
@@ -830,11 +833,7 @@ kubectl apply -f datenlord-demo.yaml
           <img src="images/logo_Dark.png">
         </div>
         <div class="footer_icon">
-          <img src="images/icon1.png">
-          <img src="images/icon2.png">
-          <img src="images/icon3.png">
-          <img src="images/icon4.png">
-          <img src="images/icon5.png">
+          <img src="images/icon5.png" onclick="window.location.href='https://github.com/'">
         </div>
       </div>
     </div>
