--- a/en/home.html
+++ b/en/home.html
@@ -91,14 +91,17 @@
                     <p onclick="window.location.href='../join.html'">JOIN US</p>
                 </div>
                 <div class="lang_select">
-                    <p>ZH</p>
+                    <p>中</p>
                     <img src="../images/drop-down.png" class="header_arrow drop_down">
                     <div id="lang" class="lang_box">
                         <ul class="lang">
-                            <li onclick="window.location.href='../home.html'">ZH</li>
+                            <li onclick="window.location.href='../home.html'">中</li>
                             <li>EN</li>
                         </ul>
                     </div>
+                </div>
+                <div class="github_icon">
+                    <img src="../images/github_icon.png" onclick="window.location.href='https://github.com/'">
                 </div>
             </div>
         </div>
@@ -145,11 +148,7 @@
                 <img src="../images/logo_Dark.png">
             </div>
             <div class="footer_icon">
-                <img src="../images/icon1.png">
-                <img src="../images/icon2.png">
-                <img src="../images/icon3.png">
-                <img src="../images/icon4.png">
-                <img src="../images/icon5.png">
+                <img src="../images/icon5.png" onclick="window.location.href='https://github.com/'">
             </div>
         </div>
     </div>
