--- a/home.html
+++ b/home.html
@@ -92,10 +92,13 @@
                     <img src="./images/drop-down.png" class="header_arrow drop_down">
                     <div id="lang" class="lang_box">
                         <ul class="lang">
-                            <li>ZH</li>
+                            <li>中</li>
                             <li onclick="window.location.href='./en/home.html'">EN</li>
                         </ul>
                     </div>
+                </div>
+                <div class="github_icon">
+                    <img src="images/github_icon.png" onclick="window.location.href='https://github.com/'">
                 </div>
             </div>
         </div>
@@ -142,11 +145,7 @@
                 <img src="images/logo_Dark.png">
             </div>
             <div class="footer_icon">
-                <img src="images/icon1.png">
-                <img src="images/icon2.png">
-                <img src="images/icon3.png">
-                <img src="images/icon4.png">
-                <img src="images/icon5.png">
+                <img src="images/icon5.png" onclick="window.location.href='https://github.com/'">
             </div>
         </div>
     </div>
